@@ -1873,7 +1873,7 @@ class DCInstrument {
         last_line_number = line_number;
 
         shouldInclude = true;
-        exit_locs.add(new Integer(line_number));
+        exit_locs.add(Integer.valueOf(line_number));
         isIncluded.add(true);
         break;
 
@@ -2400,7 +2400,7 @@ class DCInstrument {
 
   /**
    * Modify a doubled native method to call its original method.  It pops
-   * all of the paramter tags off of the tag stack.  If there is a
+   * all of the parameter tags off of the tag stack.  If there is a
    * primitive return value it puts a new tag value on the stack for
    * it.
    *
@@ -3145,7 +3145,7 @@ class DCInstrument {
       String[] key_val = line.split ("  *");
       assert !static_map.containsKey (key_val[0])
         : key_val[0] + " " + key_val[1];
-      static_map.put (key_val[0], new Integer (key_val[1]));
+      static_map.put (key_val[0], Integer.valueOf(key_val[1]));
       // System.out.printf ("Adding %s %s to static map%n", key_val[0],
       //                   key_val[1]);
     }
